--- a/app/globals.css
+++ b/app/globals.css
@@ -74,3 +74,22 @@ body,
     @apply bg-background text-foreground;
   }
 }
+
+.playing{
+  visibility: hidden;
+}
+
+
+.rotate {
+  animation: rotate 2s linear infinite;
+}
+
+@keyframes rotate {
+  0% {
+    transform: rotate(0deg);
+  }
+
+  100% {
+    transform: rotate(360deg);
+  }
+}
